--- a/src/app/PRICING/pricing-initiate/pricing-initiate.component.html
+++ b/src/app/PRICING/pricing-initiate/pricing-initiate.component.html
@@ -1,5 +1,5 @@
 
-<app-initiate-main (BroadcastQuoteID)="ReceiveQuoteID($event)"></app-initiate-main>
+<app-initiate-main (BroadcastQuoteID)="ReceiveQuoteID($event)" (AddNewQuote)="AddNewComponent()"></app-initiate-main>
 
 
    
