--- a/src/app/PRICING/pricing-finalised/pricing-finalised.component.html
+++ b/src/app/PRICING/pricing-finalised/pricing-finalised.component.html
@@ -1,1 +1,4 @@
-<p>pricing-finalised works!</p>
+
+<app-initiate-main  (BroadcastQuoteID)="ReceiveQuoteID($event)"></app-initiate-main>
+
+<app-product-finalised #productFinalised></app-product-finalised>
