--- a/src/app/PRICING/pricing-finalised/pricing-finalised.component.html
+++ b/src/app/PRICING/pricing-finalised/pricing-finalised.component.html
@@ -1,4 +1,5 @@
 
-<app-initiate-main  (BroadcastQuoteID)="ReceiveQuoteID($event)"></app-initiate-main>
+<app-initiate-main  (BroadcastQuoteID)="ReceiveQuoteID($event)" DisabledMode="yes"></app-initiate-main>
 
+<app-product-details #productDetails ></app-product-details>
 <app-product-finalised #productFinalised></app-product-finalised>
