--- a/src/app/PRICING/product-finalised/product-finalised.component.html
+++ b/src/app/PRICING/product-finalised/product-finalised.component.html
@@ -10,7 +10,7 @@
                 <th mat-header-cell *matHeaderCellDef> Processed</th>
                 <td mat-cell *matCellDef="let element"> {{element.isCompleted}} </td>
             </ng-container>
-            
+
             <ng-container matColumnDef="ProductCode">
                 <th mat-header-cell *matHeaderCellDef> Product Code</th>
                 <td mat-cell *matCellDef="let element"> {{element.ProductCode}} </td>
@@ -26,11 +26,12 @@
                 <td mat-cell *matCellDef="let element">
                     <mat-button-toggle-group #group="matButtonToggleGroup" name="fontStyle" aria-label="Font Style"
                         class="btn-toggle-group">
-                        
-                        <mat-button-toggle [value]='element.lineID' >
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">insert_chart_outlined</mat-icon>
+
+                        <mat-button-toggle [value]='element.lineID'>
+                            <mat-icon aria-hidden="false" aria-label="Example home icon">insert_chart_outlined
+                            </mat-icon>
                         </mat-button-toggle>
-                        <mat-button-toggle [value]='element.lineID' (click)="lineEdit(element.CompletionLineID)">
+                        <mat-button-toggle [value]='element.lineID' (click)="lineEdit(element)">
                             <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
                         </mat-button-toggle>
                     </mat-button-toggle-group>
@@ -43,6 +44,10 @@
 
     </mat-card>
 
+    <mat-card>
+
+        <app-product-details #productDetails ShowGrid="no"></app-product-details>
+    </mat-card>
 
     <mat-card *ngIf="showCompletionLine">
         <mat-form-field class="container-half-width">
