--- a/src/app/PRICING/product-finalised/product-finalised.component.html
+++ b/src/app/PRICING/product-finalised/product-finalised.component.html
@@ -153,5 +153,64 @@
             <input matInput placeholder="Exchange Rate" formControlName="ExchangeRate">
         </mat-form-field>
 
+        <table mat-table [dataSource]="lineKeyVal" class="mat-elevation-z8 product-lines-table">
+
+            <!--- Note that these columns can be defined in any order.
+                                                      The actual rendered columns are set as a property on the row definition" -->
+
+            <ng-container matColumnDef="Key">
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-form-field class="example-full-width" >
+                        <input matInput placeholder="Key"  formControlName="FinaliseKey">
+                    </mat-form-field>
+                </th>
+                <td mat-cell *matCellDef="let element"> {{element.Key}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Value" >
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Value" formControlName="FinaliseValue">
+                    </mat-form-field>
+                </th>
+                <td mat-cell *matCellDef="let element"> {{element.Value}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="Actions">
+                <th mat-header-cell *matHeaderCellDef >
+                    <button class="btn-add-product" mat-raised-button (click)="addKeyValue()" color="primary">Save</button>
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-button-toggle-group #group="matButtonToggleGroup" name="fontStyle" aria-label="Font Style"
+                        class="btn-toggle-group">
+
+                        <mat-button-toggle [value]='element.lineID'>
+                            <mat-icon aria-hidden="false" aria-label="Example home icon">insert_chart_outlined
+                            </mat-icon>
+                        </mat-button-toggle>
+                        <mat-button-toggle [value]='element.lineID' (click)="lineEdit(element)">
+                            <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+                        </mat-button-toggle>
+                    </mat-button-toggle-group>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayKeyValColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayKeyValColumns;"></tr>
+
+        </table>
+
+        <br><br>
+
+        <div>
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
+                <mat-button-toggle (click)="save()">Save</mat-button-toggle>
+                <mat-button-toggle (click)="cancel()">Cancel</mat-button-toggle>
+                <button class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
+                    [disabled]="!quoteSubmitted">Add Product</button>
+            </mat-button-toggle-group>
+        </div>
+
     </mat-card>
 </form>
