--- a/src/app/PRICING/product-finalised/product-finalised.component.html
+++ b/src/app/PRICING/product-finalised/product-finalised.component.html
@@ -114,6 +114,7 @@
 
 
         <mat-form-field class="container-half-width">
+
             <input matInput placeholder="Quote Expiration Date" formControlName="QuoteExpirationDate">
         </mat-form-field>
         <mat-form-field class="container-half-width">
@@ -153,7 +154,23 @@
             <input matInput placeholder="Exchange Rate" formControlName="ExchangeRate">
         </mat-form-field>
 
+
         <br><br>
+        <div>
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
+                <button type="button" (click)="saveline()" class="btn btn-success">Save</button>
+                <button type="button" (click)="cancel()">Cancel</button>
+            </mat-button-toggle-group>
+        </div>
+
+
+
+
+        <br><br>
+
+
+       
+
         <div class="container-full-width">
             <div class="key-val-style">
                 <b>Key</b>
@@ -164,16 +181,19 @@
             <div class="key-val-style">
                 <b>Actions</b>
             </div>
-        </div>        
+        </div>
         <div class="container-full-width">
             <div class="key-val-style">
                 <input matInput placeholder="Key" formControlName="FinaliseKey">
             </div>
             <div class="key-val-style">
-                <input matInput placeholder="Key" formControlName="FinaliseValue" step="0.01" placeholder="0.00" type="number" >
+                <input matInput placeholder="Key" formControlName="FinaliseValue" step="0.01" placeholder="0.00"
+                    type="number">
             </div>
             <div class="key-val-style">
-                <button class="btn-add-product" mat-raised-button (click)="addKeyValue()" color="primary">Save</button> <button class="btn-add-product" mat-raised-button (click)="clear()" >Clear</button>
+                <button class="btn-add-product" class="btn btn-outline-success" (click)="addKeyValue()"
+                    color="primary">Save</button>
+                <button class="btn-add-product" class="btn btn-outline-success" (click)="clear()">Clear</button>
             </div>
 
         </div>
@@ -185,22 +205,15 @@
             <div class="key-val-style">
                 {{pair.Value}}
             </div>
-            <div class="key-val-style">
-                <button class="btn-add-product" mat-raised-button (click)="edit(pair)" >Edit</button>
+            <div class="key-val-style-15">
+                <button class="btn-add-product" mat-raised-button (click)="edit(pair)">Edit</button>
             </div>
-            <div class="key-val-style">
-                <button class="btn-add-product" mat-raised-button (click)="delete(pair)"
-                    >Delete</button>
+            <div class="key-val-style-15">
+                <button class="btn-add-product" mat-raised-button (click)="delete(pair)">Delete</button>
             </div>
         </div>
         <br><br>
 
-        <div>
-            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                <mat-button-toggle (click)="save()">Save</mat-button-toggle>
-                <mat-button-toggle (click)="cancel()">Cancel</mat-button-toggle>                
-            </mat-button-toggle-group>
-        </div>
 
     </mat-card>
 </form>
