--- a/src/app/PRICING/pricing-search/pricing-search.component.css
+++ b/src/app/PRICING/pricing-search/pricing-search.component.css
@@ -1,11 +1,23 @@
 .container {
     
-    max-width: 900px;
+    max-width: 1200px;
     width: 100%;
   }
   
   .container-full-width {
+    width: 80%;
+    padding-left: 20px;
+    padding-right: 40px;
+  }
+
+  .container-half-width {
     width: 40%;
+    padding-left: 20px;
+    padding-right: 40px;
+  }
+
+  .container-quarter-width {
+    width: 15%;
     padding-left: 20px;
     padding-right: 40px;
   }
