--- a/src/app/PRICING/pricing-search/pricing-search.component.html
+++ b/src/app/PRICING/pricing-search/pricing-search.component.html
@@ -65,7 +65,7 @@
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
                 <mat-button-toggle (click)="search('All_Saved')">Find All Saved</mat-button-toggle>
                 <mat-button-toggle (click)="search('All_Pending')">Find All Pending</mat-button-toggle>
-                <mat-button-toggle (click)="search('Search')">Search</mat-button-toggle>
+                <mat-button-toggle (click)="search('custom')">Search</mat-button-toggle>
             </mat-button-toggle-group>
         </div>
     </mat-card>
@@ -130,7 +130,7 @@
                     <th mat-header-cell *matHeaderCellDef> Actions </th>
                     <td mat-cell *matCellDef="let element">
                         <mat-button-toggle [value]='element.lineID' (click)="lineEdit(element)">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+                            <mat-icon aria-hidden="false" >edit</mat-icon>
                         </mat-button-toggle>
                     </td>
                 </ng-container>
